--- a/style.css
+++ b/style.css
@@ -1,46 +1,72 @@
 * {
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
+  
 }
 
-:focus {
- /* TODO */
+input:focus {
+  border: 1px solid yellow;
+  outline: 1px solid darkblue;
 }
 
 body {
-  /* TODO */
+  text-align: center;
+  height: 100vh;
+  background-image: linear-gradient (135deg, indigo, purple);
+  padding: 0;
+  margin: 0;
 }
 
 input {
- /* TODO */
+  width: 400px;
 }
 
 .search-container {
- /* TODO */
+  margin-top: 100px;
+  position: absolute;
+  left: 30%;
 }
 .search-container input,
 .search-container .suggestions {
-  /* TODO */
+  background-color: violet;
 }
 .search-container input {
- /* TODO */
+  background-color: violet;
 }
 .search-container .suggestions {
-   /* TODO */
+text-align: center;
+background-color: violet;
+}
+
+
+.suggestions {
+  position: absolute;
+  top: 100%;
+  margin-right: auto;
+  margin-left: 400;
 }
 
 ul {
-  /* TODO */
+  list-style: none;
+  padding: 0;
+  margin:  0;
 }
 ul.has-suggestions {
   /* TODO */
 }
 ul li {
-  /* TODO */
+  list-style-type: none;
+  padding: 0;
+  margin:  0;
 }
 ul li:hover {
-  /* TODO */
+  cursor: pointer;
+  background-color: lightpink;
 }
 
 input {
    /* TODO */
+}
+
+highlighted {
+  background-color: lightsalmon;
 }
