--- a/style.css
+++ b/style.css
@@ -1,48 +1,41 @@
 * {
   box-sizing: border-box;
-  
 }
 
 input:focus {
   border: 1px solid yellow;
-  outline: 1px solid darkblue;
+  outline: 1px solid orangered;
 }
+
 
 body {
   text-align: center;
   height: 100vh;
-  background-image: linear-gradient (135deg, indigo, purple);
+  background: linear-gradient(to right, yellow, darkorange);
   padding: 0;
   margin: 0;
 }
 
 input {
-  width: 400px;
+  width: 300px;
 }
 
 .search-container {
-  margin-top: 100px;
   position: absolute;
-  left: 30%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
 .search-container input,
 .search-container .suggestions {
-  background-color: violet;
+  background-color: rgb(254, 162, 42);
+  width: 300px;
 }
-.search-container input {
-  background-color: violet;
-}
-.search-container .suggestions {
-text-align: center;
-background-color: violet;
-}
-
 
 .suggestions {
-  position: absolute;
-  top: 100%;
-  margin-right: auto;
-  margin-left: 400;
+  text-align: left;
+  position: inherit;
 }
 
 ul {
@@ -50,9 +43,7 @@ ul {
   padding: 0;
   margin:  0;
 }
-ul.has-suggestions {
-  /* TODO */
-}
+
 ul li {
   list-style-type: none;
   padding: 0;
@@ -60,13 +51,5 @@ ul li {
 }
 ul li:hover {
   cursor: pointer;
-  background-color: lightpink;
-}
-
-input {
-   /* TODO */
-}
-
-highlighted {
-  background-color: lightsalmon;
+  background-color: orangered;
 }
